2012-03-23  Jon VanAlten  <jon.vanalten@redhat.com>

	* Makefile.am:
	Add target to run tapset tests.
	* tapset/hotspot_jni.stp.in:
	Add notes regarding required JVM option to Get<PrimitiveType>Field
	family of probe aliases.
	* test/tapset/ClassUnloadedProbeTester.java:
	Part of test coverage for hotspot.stp and hotspot_jni.stp tapsets.
	* test/tapset/JNIStapTest.c:
	Likewise.
	* test/tapset/JNITestClass.c:
	Likewise.
	* test/tapset/JNITestClass.h:
	Likewise.
	* test/tapset/JNITestClass.java:
	Likewise.
	* test/tapset/RunWrapper.java:
	Likewise.
	* test/tapset/StapJNIClassLoader.java:
	Likewise.
	* test/tapset/StapURLClassLoader.java:
	Likewise.
	* test/tapset/SystemtapTester.java:
	Likewise.
	* test/tapset/TestingRunner.java:
	Likewise.
	* test/tapset/jstaptest.pl:
	Wrapper script, compiles and runs tests for tapsets.

2012-03-16  Mark Wielaard  <mjw@redhat.com>

	* tapset/jstack.stp.in: Change symbolOopDesc to Symbol to accomodate
	S6990754 - Use native memory and reference counting to implement
	SymbolTable.

2012-03-14  Mark Wielaard  <mjw@redhat.com>

	* Makefile.am (EXTRA_DIST): Add tapset/jstack.stp.in.

2012-03-13  Mark Wielaard  <mjw@redhat.com>

	* tapset/jstack.stp.in: Wrap heap accessors in try-catch block to be
	able to report unusual frames.

2012-03-13  Mark Wielaard  <mjw@redhat.com>

	* tapset/jstack.stp.in: Use @var construct if available to pick
	target variable from the right CU (needed by newer DWARF/gcc
	versions).

2012-03-13  Mark Wielaard  <mjw@redhat.com>

	* tapset/jstack.stp.in: Index globals on pid() to support multiple
	running hotspot jstacks at the same time.

2012-03-13  Mark Wielaard  <mjw@redhat.com>

	* tapset/jstack.stp.in: Don't hard code constantPoolOopDesc_size.

2012-02-24  Deepak Bhole <dbhole@redhat.com>

	PR885: IcedTea7 does not build scripting support
	* patches/rhino.patch: Added 'script' to list of modules built.

2011-10-03  Xerxes Rånby  <xerxes@zafena.se>
	    Robert Lougher <rob@jamvm.org.uk>
